tests/NormalTests/paczka1/fuzzy1/11071603.err
Error in line 4: kMCN A900 22,4
Error in line 3: A900 S53 61,4
Error in line 7: yXMhnU A625 99,3
Error in line 13: q6hTDg A625 48,1
Error in line 17: kMCN A625 138,1
Error in line 18: q6hTDg A900 69,8
Error in line 22: DDO S118 88,1
Error in line 30: q6hTDg S53 76,1
